--- a/package.json
+++ b/package.json
@@ -24,5 +24,11 @@
     "parcel-plugin-nuke-dist": "^1.0.1",
     "posthtml-include": "^1.6.2",
     "sass": "^1.32.8"
+  },
+  "dependencies": {
+    "flatpickr": "^4.6.9",
+    "flicker": "^1.1.5",
+    "notiflix": "^3.2.2",
+    "save": "^2.4.0"
   }
 }
